# semanticsearch-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  main.rs  run.sh  setup.sh  stop.sh
qdrant/: client.rs
src/: main.rs
src/chunking/: chunk.rs
src/qdrant/: client.rs
types/: models.rs
